k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  selector:
    matchLabels:
      app: myapp
  replicas: 1
  template:
    metadata:
      labels:
        app: myapp
    spec: 
      containers:
      - image: CONTAINER_IMAGE
        name: myapp
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "1000m"

---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  ports:
  - port: 80 #service port  #kubeproxy will open port on worker node to which can route traffic to alb
    targetPort: 5000 #container port
    protocol: TCP
  type: ClusterIP
  selector:
    app: myapp
    
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  annotations:
    # Ingress class to use the NGINX Ingress Controller
    kubernetes.io/ingress.class: "nginx"
    # AWS-specific annotations for SSL and the load balancer
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:ap-southeast-1:841135272578:certificate/57e53df3-9728-4a16-9d18-6b748300c661"
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:

  rules:
    - host: photoapp-codedevops.labs4aws.click
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: myapp
                port:
                  number: 80   
          - path: /upload
            pathType: Prefix
            backend:
              service:
                name: myapp
                port:
                  number: 80
